[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bounty_command_center", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
sqlmodel = "^0.0.24"
structlog = "^25.4.0"
colorama = "^0.4.6"
pyyaml = "^6.0.2"
typer = "^0.17.3"
rich = "^14.1.0"
celery = "^5.5.3"
redis = "^6.4.0"
psutil = "^7.0.0"
beautifulsoup4 = "^4.13.5"
pytest = "^8.4.1"
fastapi = "^0.116.1"
httpx = "^0.28.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
markdown = "^3.8.2"
weasyprint = "^66.0"
markupsafe = "^3.0.2"
vcrpy = "^7.0.0"
pytest-vcr = "^1.0.2"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
